force-app/main/default/objects/Salesforce_License__c/Salesforce_License__c.object-meta.xml
<CustomObject>
    <label>Salesforce License</label>
    <nameField>
        <displayFormat>SFL-{0000}</displayFormat>
        <label>Salesforce License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>