force-app/main/default/objects/Salesforce_License__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that holds these Licenses.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Salesforce Licenses</relationshipLabel>
    <relationshipName>Salesforce_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>