force-app/main/default/objects/Salesforce_License__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising Studio</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
            <value>
                <fullName>Agentforce - Customer Service</fullName>
            </value>
            <value>
                <fullName>Agentforce - Marketing Campaigns</fullName>
            </value>
            <value>
                <fullName>Agentforce - Personal Shopper</fullName>
            </value>
            <value>
                <fullName>Agentforce - Sales Coach</fullName>
            </value>
            <value>
                <fullName>Agentforce - SDR</fullName>
            </value>
            <value>
                <fullName>API Access</fullName>
            </value>
            <value>
                <fullName>Channel Account Login</fullName>
            </value>
            <value>
                <fullName>Channel Account Member</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud B2B</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud B2B Login License</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud B2B Member License</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud B2B Plus Login License</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud B2B Plus Member License</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud B2C</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud D2C</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>CPQ &amp; Billing</fullName>
            </value>
            <value>
                <fullName>CPQ for Customer Communities Login</fullName>
            </value>
            <value>
                <fullName>CPQ for Customer Communities Member</fullName>
            </value>
            <value>
                <fullName>CPQ for Partner Communities Login</fullName>
            </value>
            <value>
                <fullName>CPQ for Partner Communities Member</fullName>
            </value>
            <value>
                <fullName>CPQ Plus</fullName>
            </value>
            <value>
                <fullName>CPQ Plus &amp; Billing</fullName>
            </value>
            <value>
                <fullName>CRM Analytics Growth</fullName>
            </value>
            <value>
                <fullName>CRM Analytics Plus</fullName>
            </value>
            <value>
                <fullName>Customer Community Login</fullName>
            </value>
            <value>
                <fullName>Customer Community Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>