force-app/main/default/objects/Salesforce_License__c/fields/Salesforce_License__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_License__c</fullName>
    <formula>HYPERLINK(Id, TEXT( License__c ) , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce License</label>
    <type>Text</type>
</CustomField>