force-app/main/default/objects/Salesforce_License__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Tracks if the license was &apos;Suggested&apos; during the project, or is &apos;Active&apos; in the org after being purchased.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suggested</fullName>
                <default>true</default>
                <label>Suggested</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>